pycasso (0.3)

  * Layer2D::drawText() changed to Layer2D::printText()
  * Layer2D::setRotation() and Layer2D::clearRotation()
  * Layer2D::setScale() and Layer2D::clearScale()
  * Layer2D::setTranslation() and Layer2D::clearTranslation()
  * Layer2D::setScreenTranslation() and Layer2D::clearScreenTranslation()
  * Rotation parameter removed from drawSquare() and fillSquare()
  * drawSquare() and fillSquare() now use side length instead of radius
  * demo5, demo6, demo7
  * ...

pycasso (0.2) alpha release
24-Set-2007

  * Complete event system defined
  * SDL event system implemented
  * Basic class: Window
  * Canvas becomes Layer
  * Layer2D created, leaving space for future Layer3D
  * Image removed, replaced by Layer2D
  * createPNGLayer() and drawLayer()
  * demo2
  * demo3
  * demo4
  * Color functions
  * Exceptions thrown
  * Python Module by way of SIP
  * startDrawing() and stopDrawing() removed
  * Window::update()
  * Layer::clear()
  * Window::setClearOnUpdate()
  * Layer2D::drawSquare()
  * Layer2D::drawCircle()
  * Font class
  * Window::loadFont()
  * Window::removeFont()
  * Layer2D::setFont()
  * Layer2D::drawText()


pycasso (0.1) unstable developer release
13-Aug-2007

  * First pycasso file release! :)
  * Basic classes: Pycasso, Canvas, Image and EventQ
  * Some drawing primitives: drawPoint(), drawLine(), drawTriangle(),
  drawFilledTriangle(), drawFilledSquare(), drawFilledCircle()
  * Set line width and point size
  * Set background and foreground colors for drawing
  * Load and draw png images
  * Skeleton event system with the QUIT event supported
  * SDL_OPENGL system only for now
  * Basic demo1 with a moving circle