@@ -98,7 +98,7 @@ public:
                 float width=0.0f,
                 float height=0.0f);
 
-    virtual void printText(float x, float y, string text);
+    virtual void drawText(float x, float y, string text);
 
     virtual void _initEmpty(int width, int height);
     virtual void _loadPNG(string filePath);
@@ -107,9 +107,6 @@ public:
 protected:
     void lock();
     void unlock();
-
-    void moveRasterX(int x);
-    void moveRasterY(int y);
 
     bool mLocked;
 
