@@ -1,10 +1,11 @@
 pycasso (0.3)
 
-  * Layer2D::drawText() changed to Layer2D::printText()
   * Layer2D::setRotation() and Layer2D::clearRotation()
   * Layer2D::setScale() and Layer2D::clearScale()
   * Layer2D::setTranslation() and Layer2D::clearTranslation()
   * Layer2D::setScreenTranslation() and Layer2D::clearScreenTranslation()
+  * Layer2D::drawText() changed to texture system, text can be scaled and
+  rotated like anything else
   * Rotation parameter removed from drawSquare() and fillSquare()
   * drawSquare() and fillSquare() now use side length instead of radius
   * demo5, demo6, demo7
